Some agg expressions crash sbe_expression_bm

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • QE 2022-10-17, QE 2022-10-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      See the SBE column entries labeled crash in the following comment of SERVER-59123:

      https://jira.mongodb.org/browse/SERVER-59123?focusedCommentId=4863444&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-4863444

      All of these benchmarks work fine in Classic (expression_bm executable) but cause crashes in the SBE benchmark tool (sbe_expression_bm executable created by SERVER-69798). I looked at several of them and the proximal cause of the crashes is they trigger the assertion

      tassert(6979800, "Unexpected: EvalStage.stage is not null", evalStage.stageIsNull()); 

      This assertion is after the check for whether the expression is supported in SBE, so all of these are for expressions that SBE does support.

      In one case I tried commenting out the above assert and that led to a crash in SBE itself. Thus I have opened this ticket to debug this problem, and in the meantime I have temporarily not registered any of the crashing expressions with the SBE benchmarking tool in SERVER-59123 so it can be delivered without waiting for the fix to the SBE problem.

            Assignee:
            Ivan Fefer (Inactive)
            Reporter:
            Kevin Cherkauer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: