SERVER-70260 Support stage expression in SBE benchmark