src/mongo/db/exec/sbe/stages/bson_scan.cpp
@@ -37,29 +37,23 @@
 
 namespace mongo {
 namespace sbe {
-BSONScanStage::BSONScanStage(const char* bsonBegin,
-                             const char* bsonEnd,
+BSONScanStage::BSONScanStage(std::vector<BSONObj> bsons,
                              boost::optional<value::SlotId> recordSlot,
+                             PlanNodeId planNodeId,
                              std::vector<std::string> fields,
                              value::SlotVector vars,
-                             PlanNodeId planNodeId,
                              bool participateInTrialRunTracking)
     : PlanStage("bsonscan"_sd, planNodeId, participateInTrialRunTracking),
-      _bsonBegin(bsonBegin),
-      _bsonEnd(bsonEnd),
+      _bsons(std::move(bsons)),
       _recordSlot(recordSlot),
       _fields(std::move(fields)),
-      _vars(std::move(vars)),
-      _bsonCurrent(bsonBegin) {}
+      _vars(std::move(vars)) {
+    _bsonCurrent = _bsons.begin();
+}
 
 std::unique_ptr<PlanStage> BSONScanStage::clone() const {
-    return std::make_unique<BSONScanStage>(_bsonBegin,
-                                           _bsonEnd,
-                                           _recordSlot,
-                                           _fields,
-                                           _vars,
-                                           _commonStats.nodeId,
-                                           _participateInTrialRunTracking);
+    return std::make_unique<BSONScanStage>(
+        _bsons, _recordSlot, _commonStats.nodeId, _fields, _vars, _participateInTrialRunTracking);
 }
 
 void BSONScanStage::prepare(CompileCtx& ctx) {
@@ -92,32 +86,27 @@ void BSONScanStage::open(bool reOpen) {
     auto optTimer(getOptTimer(_opCtx));
 
     _commonStats.opens++;
-    _bsonCurrent = _bsonBegin;
+    _bsonCurrent = _bsons.begin();
 }
 
 PlanState BSONScanStage::getNext() {
     auto optTimer(getOptTimer(_opCtx));
 
-    if (_bsonCurrent < _bsonEnd) {
+    if (_bsonCurrent != _bsons.end()) {
         if (_recordAccessor) {
             _recordAccessor->reset(value::TypeTags::bsonObject,
-                                   value::bitcastFrom<const char*>(_bsonCurrent));
+                                   value::bitcastFrom<const char*>(_bsonCurrent->objdata()));
         }
 
         if (auto fieldsToMatch = _fieldAccessors.size(); fieldsToMatch != 0) {
-            auto be = _bsonCurrent;
-            auto end = be + ConstDataView(be).read<LittleEndian<uint32_t>>();
-            // Skip document length.
-            be += 4;
             for (auto& [name, accessor] : _fieldAccessors) {
                 accessor->reset();
             }
-            while (*be != 0) {
-                auto sv = bson::fieldNameView(be);
-                if (auto it = _fieldAccessors.find(sv); it != _fieldAccessors.end()) {
+            for (const auto& element : *_bsonCurrent) {
+                auto fieldName = element.fieldNameStringData();
+                if (auto it = _fieldAccessors.find(fieldName); it != _fieldAccessors.end()) {
                     // Found the field so convert it to Value.
-                    auto [tag, val] = bson::convertFrom<true>(be, end, sv.size());
-
+                    auto [tag, val] = bson::convertFrom</*View = */ true>(element);
                     it->second->reset(tag, val);
 
                     if ((--fieldsToMatch) == 0) {
@@ -125,13 +114,11 @@ PlanState BSONScanStage::getNext() {
                         break;
                     }
                 }
-
-                be = bson::advance(be, sv.size());
             }
         }
 
         // Advance to the next document.
-        _bsonCurrent += ConstDataView(_bsonCurrent).read<LittleEndian<uint32_t>>();
+        ++_bsonCurrent;
 
         _specificStats.numReads++;
         return trackPlanState(PlanState::ADVANCED);
